--- a/ProjetoEvers/nbproject/private/private.properties
+++ b/ProjetoEvers/nbproject/private/private.properties
@@ -1,6 +1,7 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+file.reference.postgresql-42.2.5.jar=E:\\Lucas\\Documentos\\Gabriel\\ProjetoEvers\\postgresql-42.2.5.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Usuario\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\LAdos\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
