--- a/ProjetoEvers/nbproject/project.properties
+++ b/ProjetoEvers/nbproject/project.properties
@@ -34,7 +34,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.PostgreSQLDriver.classpath}:\
-    ${file.reference.postgresql-42.2.5.jar}
+    ${file.reference.postgresql-42.2.5.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
